# bootcamp

ex-basics/: README.md  pyproject.toml
ex-basics-1/: README.md  main.py  pyproject.toml
ex-basics-1/ex_basics_1_pluto.egg-info/: PKG-INFO  SOURCES.txt
ex-basics/src/ex_basics_aganitha/: main.py
ex-tools-1/: README.md
ex-tools-1/webpage/: index.html  serve.sh
