[project]
name = "ex-basics-aganitha"
version = "0.1.0"
description = "Solution for ex-basics-[1,2,3]"
readme = "README.md"
authors = [
    { name = "Dhruv Jha", email = "dhruvjha2002@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
    "typer>=0.16.1",
]

[tool.uv]
publish-url = "https://test.pypi.org/legacy/"

[project.scripts]
say-hello = "ex_basics_aganitha.main:app"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
